--- a/client/components/item/template.html
+++ b/client/components/item/template.html
@@ -1,4 +1,4 @@
-<div class="item panel">
+<div class="item">
   <h4 class="item__name">
     {{model.name}}
     <small class="item__type">{{model.type}}</small>
