--- a/client/components/itemsStack/template.html
+++ b/client/components/itemsStack/template.html
@@ -1,5 +1,5 @@
 <div
-  class="grid-block vertical"
+  class="grid-block shrink vertical"
   ng-controller="ItemsListCtrl">
 
   <h3 class="grid-content shrink">Liste des trophées</h3>
