--- a/client/assets/scss/app.scss
+++ b/client/assets/scss/app.scss
@@ -1,4 +1,5 @@
 @import "settings";
 @import "foundation";
-@import "animate.css";
-@import "modules.scss";
+@import "animate";
+@import "xeditable";
+@import "modules";
