--- a/client/assets/scss/modules/_todos.scss
+++ b/client/assets/scss/modules/_todos.scss
@@ -23,7 +23,7 @@ $row-height : 3rem;
 
 .stack__element{
   opacity: 1;
-  max-height: 160px;
+  // max-height: 160px;
   transition:
     opacity .2s 0s ease-in,
     transform .2s 0s ease-in,
@@ -68,8 +68,26 @@ $row-height : 3rem;
   margin-bottom: 2rem;
 }
 
+.item__name {
+  display: inline-block;
+  margin-right: 1rem;
+}
+
 .item__button{
   @extend .button;
   float: right;
   margin: 0;
+}
+
+.item .editable {
+
+}
+
+.item .editable-click{
+  border-bottom: 0;
+}
+
+.item .editable-empty{
+  color: #aaa;
+
 }
