Now creates and saves new ingredients

--- a/client/assets/scss/_modules.scss
+++ b/client/assets/scss/_modules.scss
@@ -4,3 +4,6 @@
 @import "modules/header";
 @import "modules/forms";
 @import "modules/todos";
+@import "modules/action-bubble";
+@import "modules/action-layer";
+@import "modules/modals";
