--- a/client/assets/scss/modules/_forms.scss
+++ b/client/assets/scss/modules/_forms.scss
@@ -15,3 +15,12 @@
 .ingredient {
   list-style: none;
 }
+
+.editable-input {
+  height: auto !important;
+  width: auto !important;
+  display: inline !important;
+  border: 0 !important;
+  padding: 0 !important;
+  margin: 0 !important;
+}
