--- a/client/components/autocomplete/template.html
+++ b/client/components/autocomplete/template.html
@@ -9,12 +9,10 @@
     <li
       ng-repeat="suggestion in suggestions"
       class="blockSpan"
-      ng-click="addTomodel($index)"
+      ng-click="addToModel($index)"
       ng-mouseover="$parent.selectedIndex=$index"
       ng-class="{active : selectedIndex===$index}">
       {{suggestion.name}}
     </li>
   </ul>
-  {{ingredients}}
-
 </div>
