--- a/client/views/items.html
+++ b/client/views/items.html
@@ -1,10 +1,8 @@
 <div class="grid-content shrink">
   <h2>Editer les cacas</h2>
 </div>
-<div class="grid-block small-up-1 medium-up-2 large-up-3">
+<div class="grid-block">
 
-  <div ng-include="'components/itemsStack/template.html'" class="grid-block small-12 medium-6 large-4 vertical"></div>
-
-  <div ng-include="'components/itemEditor/template.html'" class="grid-block small-12 medium-6 large-4 vertical"></div>
+  <div ng-include="'components/itemsStack/template.html'" class="grid-block"></div>
 
 </div>
