now populating the database

--- a/client/assets/scss/modules/_forms.scss
+++ b/client/assets/scss/modules/_forms.scss
@@ -3,9 +3,16 @@
 .form--edit {
 
 }
+#{$text-input-selectors}{
+  &.input {}
+  &.input--text {}
+  &.input--quantity {
+    width: 4rem;
+    display: inline-block;
+  }
+}
 
 .list {}
-
 
 .list--recipe {
   padding: 0;
