Correct some collision problems in recipe autocomplete

--- a/client/components/recipe/template.html
+++ b/client/components/recipe/template.html
@@ -1,6 +1,6 @@
 <div
   class="recipe">
-  <div ng-repeat="dosage in model track by dosage._ingredient._id" class="dosage">
+  <div ng-repeat="dosage in model track by dosage._ingredient.name" class="dosage">
     <input type="number" ng-model="dosage.quantity" class="input input--quantity dosage__quantity">
     <span class="dosage__ingredient">{{dosage._ingredient.name}}</span>
     <span>&nbsp;<b ng-click="removeIngredient($index)" class="dosage__delete-button button--delete">X</b></span>
