--- a/client/assets/scss/_settings.scss
+++ b/client/assets/scss/_settings.scss
@@ -98,8 +98,8 @@ $body-background: #eee;
 // $body-antialiased: true;
 
 // Application Colors
-// $primary-color: #00558b;
-// $secondary-color: #f1f1f1;
+$primary-color: hsl(145, 49%, 53%);
+$secondary-color: #00558b;
 // $alert-color: #F04124;
 // $info-color: #A0D3E8;
 // $success-color: #43AC6A;
