--- a/client/assets/scss/modules/_all.scss
+++ b/client/assets/scss/modules/_all.scss
@@ -1,8 +1,12 @@
+$header-height: 5rem;
+$row-width: 800px;
+
 .panel{
   @extend .low;
 
   &:hover,{@extend .medium;}
 }
  body{
-   background: #eee;
+   background: desaturate($primary-color, 5%);
+   padding-top: $header-height;
  }
