--- a/client/assets/scss/modules/_header.scss
+++ b/client/assets/scss/modules/_header.scss
@@ -1,9 +1,47 @@
-.header{
+.header {
   @extend .low;
 
-  background:$secondary-color;
+  height: $header-height;
+  overflow: visible;
+
+  background:$primary-color;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+
+  z-index: 999;
+  padding: 0 1rem;
 }
 
-.header-title{
+.header__title{
   color: #fff;
+  line-height: $header-height;
+  font-size: 2rem;
+  position: absolute;
+  left: 0;
+}
+
+.header__search-bar__wrapper--outer {
+  margin: auto;
+}
+
+.header__search-bar {
+  position: relative;
+  margin-top: $header-height / 2;
+  height: 50%;
+  margin: auto;
+  width: 50%;
+  min-width: 320px;
+  max-width: $row-width;
+  border-radius: 2px;
+  border: 0;
+  box-shadow: 0 0 1rem 1rem $primary-color;
+
+  font-size: 2rem;
+  color: #533;
+}
+
+.search-bar {
+
 }
