--- a/client/assets/scss/modules/_todos.scss
+++ b/client/assets/scss/modules/_todos.scss
@@ -32,7 +32,7 @@ $row-height : 3rem;
     opacity .2s 0s ease-in,
     transform .2s 0s ease-in,
     max-height .2s 0s ease-in-out;
-  margin: 1rem;
+  margin: 0.5rem;
 
   &.ng-enter, &.ng-hide-remove{
     max-height: 1px;
@@ -68,19 +68,39 @@ $row-height : 3rem;
   @extend .panel;
   overflow: visible;
   position: relative;
-  padding: 2rem;
+  padding: 1rem;
   text-transform: capitalize;
   display: block;
-  border: 1px solid #eee;
+  border: 1px solid transparent;
+  color: #fff;
+  background-color: lighten($primary-color, 5%);
 }
 
 .item--alone {
   margin-bottom: 2rem;
 }
 
+.item__type {
+  margin: 0;
+  font-size: 0.75rem;
+  color: inherit;
+
+}
+
 .item__name {
   display: inline-block;
-  margin-right: 1rem;
+  margin-top: 0;
+  margin-bottom: 0;
+  font-size: 1.2rem;
+  color: inherit;
+
+}
+
+.item__category {
+  font-size: 1rem;
+  margin: 0;
+  color: inherit;
+
 }
 
 .item__button{
@@ -107,6 +127,28 @@ $row-height : 3rem;
   position: relative;
   padding-right: 1.5rem;
   padding-left: 0.5rem;
+  line-height: 1rem;
+  height: auto;
+  font-size: 0.75rem;
+}
+
+#{$text-input-selectors}{
+  &.dosage__quantity {
+    font-size: 0.75rem;
+    height: 0.75rem;
+    padding: 0;
+    border: 0;
+    width: 2rem;
+    display: inline-block;
+    text-align: right;
+    position: relative;
+    top: 0.35rem;
+  }
+}
+
+&.input--quantity {
+  margin: 0;
+  display: inline-block;
 }
 
 .dosage__delete-button {
@@ -116,4 +158,48 @@ $row-height : 3rem;
   right: 0.5rem;
   top: -0.25rem;
   line-height: 2.5rem;
+}
+
+.button {
+  padding: 0.5rem;
+  font-size: 0.75rem;
+  margin: 0;
+
+  &:focus {
+    outline: 0;
+  }
+}
+
+.button--delete {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: transparent !important;
+  color: transparent;
+  font-size: 0.1px;
+  padding: 0;
+  width: 1.5rem;
+  height: 1.5rem;
+
+  &:after, &:before {
+    position: absolute;
+    content: ' ';
+    display: block;
+    background: #fff;
+    transform: rotate(45deg);
+  }
+
+  &:after {
+    top: calc(50% - 1px);
+    right: 25%;
+    width: 50%;
+    height: 2px;
+  }
+
+  &:before {
+    right: calc(50% - 1px);
+    top: 25%;
+    width: 2px;
+    height: 50%;
+  }
 }
