--- a/client/components/item/template.html
+++ b/client/components/item/template.html
@@ -1,4 +1,6 @@
-<div class="item">
+<div
+  ng-class="className"
+  class="item">
     <p
       class="item__type"
       editable-text="model.type"
