--- a/client/assets/scss/_settings.scss
+++ b/client/assets/scss/_settings.scss
@@ -92,7 +92,7 @@
 // We use these to control various global styles
 $body-background: #eee;
 // $body-font-color: #222;
-// $body-font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+$body-font-family: "Lato", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
 // $body-font-weight: $font-weight-normal;
 // $body-font-style: normal;
 // $body-antialiased: true;
