--- a/client/assets/scss/modules/_todos.scss
+++ b/client/assets/scss/modules/_todos.scss
@@ -70,7 +70,6 @@ $item-shield-color: hsl(30, 50%, 50%);
 $row-height : 3rem;
 
 .grid-block{
-  overflow: visible;
 }
 
 .list--items .item{
@@ -86,17 +85,12 @@ $row-height : 3rem;
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
-  transition: all .5s ease-in-out;
 }
 
 .stack__element {
   min-width: 250px;
   flex: 1;
-  overflow: visible;
   opacity: 1;
-  // max-height: 160px;
-  transition:
-    all .1s 0s ease-in-out;
   margin: 0.5rem;
 
   &.ng-enter, &.ng-hide-remove{
@@ -117,11 +111,7 @@ $row-height : 3rem;
     width: 0;
     transform: rotate(20deg) scale(0);
     opacity: 0;
-    transition:
-      all .2s 0s ease-in,
-      width .5s 0s ease-in-out;
     z-index: 0;
-
   }
 }
 
@@ -135,14 +125,12 @@ $row-height : 3rem;
 
   box-shadow: 0;
   // border: 2px solid lighten($secondary-color, 80%);
-  overflow: visible;
+  overflow: hidden;
   position: relative;
   padding: 1rem;
   text-transform: capitalize;
   display: block;
   color: #fff;
-
-  transition: all .2s ease-in-out;
 }
 
 .item--alone {
