--- a/client/components/recipe/template.html
+++ b/client/components/recipe/template.html
@@ -2,7 +2,7 @@
   class="recipe">
   <div ng-repeat="dosage in model track by dosage._ingredient.name" class="dosage" ng-class="dosage._ingredient.className">
     <input type="number" ng-model="dosage.quantity" class="input input--quantity dosage__quantity">
-    <span class="dosage__ingredient">{{dosage._ingredient.name}}</span>
+    <span class="dosage__ingredient">{{::dosage._ingredient.name}}</span>
     <span>&nbsp;<b ng-click="removeIngredient($index)" class="dosage__delete-button button--delete">X</b></span>
   </div>
   <div class="ingredient__name grid-block small-12">
