--- a/client/assets/scss/modules/_todos.scss
+++ b/client/assets/scss/modules/_todos.scss
@@ -125,8 +125,8 @@ $row-height : 3rem;
 
   box-shadow: 0;
   // border: 2px solid lighten($secondary-color, 80%);
-  overflow: hidden;
-  position: relative;
+  overflow: visible;
+  position: static;
   padding: 1rem;
   text-transform: capitalize;
   display: block;
@@ -269,4 +269,10 @@ $row-height : 3rem;
     width: 2px;
     height: 50%;
   }
+}
+
+.action-sheet {
+  background: #faf;
+  position: fixed;
+  bottom: 0;
 }
