--- a/client/components/item/template.html
+++ b/client/components/item/template.html
@@ -1,18 +1,14 @@
 <div
   ng-class="className"
   ng-show="isVisible()"
+  on-long-press="showActionSheet()"
   class="item">
-  <zf-action-sheet>
-    <zf-as-button title="I'm an Action Sheet"></zf-as-button>
-    <zf-as-content position="bottom">
-      <p>Tap to share</p>
-      <ul>
-      <li><a href="#">Twitter</a></li>
-      <li><a href="#">Facebook</a></li>
-      <li><a href="#">Mail</a></li>
-      </ul>
-    </zf-as-content>
-  </zf-action-sheet>
+
+  <div
+    class="action-sheet"
+    ng-if="isActionSheetVisible">
+    Yoo
+  </div>
     <!-- <div class="small-menu row">
       <button
         class="button button--toggle"
