--- a/client/scss/atoms/_buttons.scss
+++ b/client/scss/atoms/_buttons.scss
@@ -9,15 +9,15 @@
 }
 
 .button--delete {
-  position: absolute;
-  top: 0;
-  right: 0;
-  background-color: transparent !important;
-  color: transparent;
-  font-size: 0.1px;
-  padding: 0;
-  width: 1.5rem;
-  height: 1.5rem;
+  // position: absolute;
+  // top: 0;
+  // right: 0;
+  // background-color: transparent !important;
+  // color: transparent;
+  // font-size: 0.1px;
+  // padding: 0;
+  // width: 1.5rem;
+  // height: 1.5rem;
 
   &:after, &:before {
     position: absolute;
