add basic contextmenu support

--- a/client/app.scss
+++ b/client/app.scss
@@ -23,6 +23,7 @@
 
 /* Molecules */
 @import "scss/molecules/recipe";
+@import "scss/molecules/contextMenu";
 
 /* Organisms */
 @import "scss/organisms/header";
