--- a/client/scss/organisms/_item.scss
+++ b/client/scss/organisms/_item.scss
@@ -77,8 +77,6 @@ $row-height : 3rem;
   right: 0;
 }
 
-.item__action-sheet{
-  position: absolute;
-  top: 0;
-  right: 0;
+.item__contextMenu{
+
 }
