right click support for context menu

--- a/client/scss/molecules/_contextMenu.scss
+++ b/client/scss/molecules/_contextMenu.scss
@@ -1,11 +1,8 @@
-.contextMenu {
-
+.rich-context-menu {
 
   @include breakpoint(medium) {
     z-index: 1000;
     background: #fff;
     position: fixed;
-    top: 500px;
-    right: 100px;
   }
 }
