--- a/client/scss/molecules/_contextMenu.scss
+++ b/client/scss/molecules/_contextMenu.scss
@@ -1,8 +1,47 @@
 .rich-context-menu {
+  z-index: 1000;
+  background: #fff;
+  position: fixed;
+  padding: 0.5rem;
+  width: 250px;
+
+  @include breakpoint(small only) {
+    bottom: 0 !important;
+    left: 0 !important;
+    right: 0 !important;
+    top: auto !important;
+
+    text-align: center;
+    padding: 2rem;
+    width: auto;
+
+  }
+}
+.rich-context-menu__actions {
+  padding: 0;
+  margin: 0;
+}
+.rich-context-menu__action {
+  cursor: pointer;
+  display: block;
+  width: 100%;
+  padding: 0.5rem 0;
+  color: #555;
+  font-weight: bold;
 
   @include breakpoint(medium) {
-    z-index: 1000;
-    background: #fff;
-    position: fixed;
+    padding: 0.5rem 1rem;
+    margin: 0 -0.5rem;
   }
+}
+.rich-context-menu__title {
+  @extend .rich-context-menu__action;
+  font-size: 0.75rem;
+  padding-bottom: 0;
+  color: #bbb;
+}
+
+.action--delete {
+  background: #f00;
+  color: #fff;
 }
